--- a/index.html
+++ b/index.html
@@ -1,6 +1,23 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <title> Portifólio Julia Guill Dias</title>
+</head>
+<body>
 <header>
- <title> Portifólio Julia Guill Dias</title>
+    <h1>Julia Guill Dias</h1>
+    <nav>
+        <ul>
+            <li><a href= "#sobre">Sobre mim </a></li>
+            <li><a href= "#projetos"> Projetos</a></li>
+            <li><a href= "#contato">Contato</a></li>
+        </ul>
+    </nav>
 </header>
+<section id="sobre">
+    <h2>Sobre mim</h2>
+    <p>Eu me chamo Julia Guill Dias, nasci no dia 20 de abril de 2011 e atualmente tenho 14 anos. Eu estudo na escola E. E. B. M. Prefeito Paulo Fioravante Penso no oitavo ano. Eu gosto de escutar música e cozinhar para meus amigos.</p>
+
+</section>
+</body>
 </html>
