--- a/index.html
+++ b/index.html
@@ -19,5 +19,11 @@
     <p>Eu me chamo Julia Guill Dias, nasci no dia 20 de abril de 2011 e atualmente tenho 14 anos. Eu estudo na escola E. E. B. M. Prefeito Paulo Fioravante Penso no oitavo ano. Eu gosto de escutar música e cozinhar para meus amigos.</p>
 
 </section>
+<section id="projetos">
+    <h2>Projetos</h2>
+    <ul>
+        <li></li>
+    </ul>
+</section>
 </body>
 </html>
