--- a/index.html
+++ b/index.html
@@ -3,6 +3,20 @@
 <head>
     <title> Portifólio Julia Guill Dias</title>
 </head>
+<style>
+    *{
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+    body{
+        font-family: Arial, Helvetica, sans-serif;
+        background-color: #F4F4F4;
+        color: palevioletred;
+        line-height: 1.6;
+        padding: 20px;
+    }
+</style>
 <body>
 <header>
     <h1>Julia Guill Dias</h1>
@@ -15,15 +29,26 @@
     </nav>
 </header>
 <section id="sobre">
-    <h2>Sobre mim</h2>
+    <h2>Sobre Mim</h2>
     <p>Eu me chamo Julia Guill Dias, nasci no dia 20 de abril de 2011 e atualmente tenho 14 anos. Eu estudo na escola E. E. B. M. Prefeito Paulo Fioravante Penso no oitavo ano. Eu gosto de escutar música e cozinhar para meus amigos.</p>
 
 </section>
 <section id="projetos">
     <h2>Projetos</h2>
     <ul>
-        <li></li>
+        <li>Projeto 1: <a href= "#"> Descrição do Projeto</a></li>
+        <li>Projeto 2: <a href= "#"> Descrição do Projeto</a></li>
+        <li>Projeto 3: <a href= "#"> Descrição do Projeto</a></li>
+        <li>Projeto 4: <a href= "#"> Descrição do Projeto</a></li>
+        <li>Projeto 5: <a href= "#"> Descrição do Projeto</a></li>
     </ul>
 </section>
+<section id="contato">
+    <h2>Contato</h2>
+[<p>Entre em contato comigo via: <a href="mailto:julia_g_dias@estudante.sesisenai.org.br">julia_g_dias@estudante.sesisenai.org.br</a></p>
+</section>
+<footer>
+    <p>&copy; @2025 - Julia Guill Dias</p>
+</footer>
 </body>
 </html>
