--- a/index.html
+++ b/index.html
@@ -4,19 +4,73 @@
     <title> Portifólio Julia Guill Dias</title>
 </head>
 <style>
-    *{
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
-    body{
-        font-family: Arial, Helvetica, sans-serif;
-        background-color: #F4F4F4;
-        color: palevioletred;
-        line-height: 1.6;
-        padding: 20px;
-    }
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    color: #333;
+    line-height: 1.6;
+    padding: 20px;
+}
+
+
+header {
+    background-color: #333;
+    color: #fff;
+    padding: 10px 0;
+    text-align: center;
+}
+
+
+header h1 {
+    margin-bottom: 10px;
+}
+
+
+nav ul {
+    list-style: none;
+} 
+
+
+nav ul li {
+    display: inline;
+    margin: 0 10px;
+}
+
+
+nav ul li a {
+    color: #fff;
+    text-decoration: none;
+}
+
+
+section {
+    margin: 20px 0;
+}
+section#sobre, 
+section#projetos, 
+section#contato {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+
+footer {
+    text-align: center;
+    margin-top: 20px;
+}
+
+
 </style>
+
 <body>
 <header>
     <h1>Julia Guill Dias</h1>
@@ -36,7 +90,7 @@
 <section id="projetos">
     <h2>Projetos</h2>
     <ul>
-        <li>Projeto 1: <a href= "#"> Descrição do Projeto</a></li>
+        <li>Projeto 1: <a href= "/cadastro.html"> Cadastro de pessoas</a></li>
         <li>Projeto 2: <a href= "#"> Descrição do Projeto</a></li>
         <li>Projeto 3: <a href= "#"> Descrição do Projeto</a></li>
         <li>Projeto 4: <a href= "#"> Descrição do Projeto</a></li>
@@ -45,7 +99,7 @@
 </section>
 <section id="contato">
     <h2>Contato</h2>
-[<p>Entre em contato comigo via: <a href="mailto:julia_g_dias@estudante.sesisenai.org.br">julia_g_dias@estudante.sesisenai.org.br</a></p>
+<p>Entre em contato comigo via: <a href="mailto:julia_g_dias@estudante.sesisenai.org.br">julia_g_dias@estudante.sesisenai.org.br</a></p>
 </section>
 <footer>
     <p>&copy; @2025 - Julia Guill Dias</p>
