--- a/cadastro.html
+++ b/cadastro.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <tittle>Cadastro de pessoas</tittle>
+        <title>Cadastro de pessoas</title>
         <link rel="stylesheet" href="static/style.css">
     </head>
     <body>
+        <a href= "index.html"> VOLTAR</a>
         <h2>Cadastro de pesssoas</h2>
         <form>
+
             <label>Nome:</label>
             <input type="text" id="Nome"required>
             <label>Email:</label>
@@ -14,6 +16,7 @@
             <label>Telefone:</label>
             <input type="tel" id="telefone" required>
             <input type="submit" value="Cadastrar">
+
         </form>
     </body>
 </html>
