--- a/index.html
+++ b/index.html
@@ -91,10 +91,9 @@ footer {
     <h2>Projetos</h2>
     <ul>
         <li>Projeto 1: <a href= "/cadastro.html"> Cadastro de pessoas</a></li>
-        <li>Projeto 2: <a href= "#"> Descrição do Projeto</a></li>
-        <li>Projeto 3: <a href= "#"> Descrição do Projeto</a></li>
-        <li>Projeto 4: <a href= "#"> Descrição do Projeto</a></li>
-        <li>Projeto 5: <a href= "#"> Descrição do Projeto</a></li>
+        <li>Projeto 2: <a href= "/desafio.html"> Projeto desáfio</a></li>
+        <li>Projeto 3: <a href= "/primeiro.html"> Projeto inicial</a></li>
+        <li>Projeto 4: <a href= "/tabelas.html"> Projeto de tabelas</a></li>
     </ul>
 </section>
 <section id="contato">
