--- a/cadastro.html
+++ b/cadastro.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="static/style.css">
     </head>
     <body>
-        <a href= "index.html"> VOLTAR</a>
+    <a href= "index.html">VOLTAR </a></li>
         <h2>Cadastro de pesssoas</h2>
         <form>
 
